# amazon-freertos

./: README.md
demos/dev_mode_key_provisioning/src/: aws_dev_mode_key_provisioning.c
demos/https/: CMakeLists.txt
libraries/abstractions/ble_hal/test/ble_test_scipts/: startTests_afqp.py  testClass.py
libraries/abstractions/ble_hal/test/src/: iot_test_ble_hal_afqp.c
libraries/abstractions/secure_sockets/test/: iot_test_udp.c
libraries/freertos_plus/aws/ota/src/: aws_iot_ota_agent.c
libraries/freertos_plus/aws/ota/test/: aws_test_ota_pal.c
libraries/freertos_plus/standard/tls/src/: iot_tls.c
projects/infineon/xmc4700_relaxkit/dave4/aws_demos/: .cproject  .gitignore  .project  board_pin_label.bpl
projects/infineon/xmc4700_relaxkit/dave4/aws_tests/: .cproject  .project
projects/infineon/xmc4800_plus_optiga_trust_m/dave4/aws_demos/: .cproject  .project
projects/infineon/xmc4800_plus_optiga_trust_m/dave4/aws_tests/: .cproject  .project
projects/ti/cc3220_launchpad/ccs/aws_tests/: .project
tests/include/: aws_test_tcp.h  iot_config_common.h
tools/cmake/: afr.cmake  afr_metadata.cmake
tools/ota_e2e_tests/: pyproject.toml
vendors/espressif/boards/esp32/: CMakeLists.txt
vendors/espressif/boards/esp32/aws_demos/config_files/: aws_ota_agent_config.h
vendors/espressif/boards/esp32_with_trust_x/: CMakeLists.txt  esp32_devkit_with_trust_x.cmake  esp32_wrover_with_trust_x.cmake
vendors/espressif/boards/esp32_with_trust_x/aws_demos/: sdkconfig  sdkconfig.defaults
vendors/espressif/boards/esp32_with_trust_x/aws_tests/: sdkconfig  sdkconfig.defaults
vendors/espressif/boards/esp32_with_trust_x/aws_tests/config_files/: aws_test_runner_config.h
vendors/infineon/: manifest.cmake
vendors/infineon/XMCLib/2.2.0/CMSIS/: CHANGELOG.txt
vendors/infineon/XMCLib/2.2.0/Newlib/: syscalls.c
vendors/infineon/XMCLib/2.2.0/drivers/: License.txt  Readme.txt
vendors/infineon/XMCLib/2.2.0/drivers/doc/: main_xmc1.txt  main_xmc4.txt  xmc1_changelog.txt  xmc1lib.dox  xmc4_changelog.txt  xmc4lib.dox
vendors/infineon/XMCLib/2.2.0/drivers/inc/: xmc1_ccu4_map.h  xmc1_ccu8_map.h  xmc1_eru_map.h  xmc1_flash.h  xmc1_gpio.h  xmc1_gpio_map.h  xmc1_rtc.h  xmc1_scu.h  xmc1_usic_map.h  xmc4_ccu4_map.h  xmc4_ccu8_map.h  xmc4_eru_map.h  xmc4_flash.h  xmc4_gpio.h  xmc4_gpio_map.h  xmc4_rtc.h  xmc4_scu.h  xmc4_usic_map.h  xmc_acmp.h  xmc_bccu.h  xmc_can.h  xmc_can_map.h  xmc_ccu4.h  xmc_ccu8.h  xmc_common.h  xmc_dac.h  xmc_device.h  xmc_dma.h  xmc_dma_map.h  xmc_dsd.h  xmc_ebu.h  xmc_ecat.h  xmc_ecat_map.h  xmc_eru.h  xmc_eth_mac.h  xmc_eth_mac_map.h  xmc_eth_phy.h  xmc_fce.h  xmc_flash.h  xmc_gpio.h  (+22 more)
vendors/infineon/XMCLib/2.2.0/drivers/src/: xmc1_eru.c  xmc1_flash.c  xmc1_gpio.c  xmc1_rtc.c  xmc1_scu.c  xmc4_eru.c  xmc4_flash.c  xmc4_gpio.c  xmc4_rtc.c  xmc4_scu.c  xmc_acmp.c  xmc_bccu.c  xmc_can.c  xmc_ccu4.c  xmc_ccu8.c  xmc_common.c  xmc_dac.c  xmc_dma.c  xmc_dsd.c  xmc_ebu.c  xmc_ecat.c  xmc_eru.c  xmc_eth_mac.c  xmc_eth_phy_dp83848.c  xmc_eth_phy_ksz8031rnl.c  xmc_eth_phy_ksz8081rnb.c  xmc_fce.c  xmc_gpio.c  xmc_hrpwm.c  xmc_i2c.c  xmc_i2s.c  xmc_ledts.c  xmc_math.c  xmc_pau.c  xmc_posif.c  xmc_prng.c  xmc_rtc.c  xmc_sdmmc.c  xmc_spi.c  xmc_uart.c  (+5 more)
vendors/infineon/boards/xmc4700_plus_optiga_trust_m/: CMakeLists.txt
vendors/infineon/boards/xmc4700_plus_optiga_trust_m/aws_demos/application_code/: main.c
vendors/infineon/boards/xmc4700_plus_optiga_trust_m/aws_demos/config_files/: iot_mqtt_agent_config.h  iot_pkcs11_config.h
vendors/infineon/boards/xmc4700_plus_optiga_trust_m/aws_tests/application_code/: main.c
vendors/infineon/boards/xmc4700_plus_optiga_trust_m/aws_tests/config_files/: FreeRTOSConfig.h  aws_test_runner_config.h  iot_test_pkcs11_config.h
vendors/infineon/boards/xmc4700_relaxkit/: CMakeLists.txt  README.md  XMC4700x2048.ld
vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/: main.c
vendors/infineon/boards/xmc4700_relaxkit/aws_demos/application_code/infineon_code/: RTE_Components.h  console_io.c  entropy_hardware.c  entropy_hardware_alt.c  ethernet.h  get_optiga_certificate.c  get_optiga_certificate.h  printf_config.h  update_metadata.c.sample
vendors/infineon/boards/xmc4700_relaxkit/aws_demos/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_demo_config.h  aws_secure_sockets_config.h  iot_pkcs11_config.h  iot_pkcs11_trustm_config.h  iot_pkcs11_trustx_config.h  iot_pkcs11_xmc_config.h
vendors/infineon/boards/xmc4700_relaxkit/aws_tests/application_code/: main.c
vendors/infineon/boards/xmc4700_relaxkit/aws_tests/application_code/infineon_code/: RTE_Device.h  console_io.c  entropy_hardware_alt.c  optiga_pal_ifx_i2c_config.c
vendors/infineon/boards/xmc4700_relaxkit/aws_tests/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  aws_secure_sockets_config.h  aws_shadow_config.h  aws_test_runner_config.h  aws_test_tcp_config.h  iot_pkcs11_config.h  iot_pkcs11_trustm_config.h  iot_pkcs11_trustx_config.h  iot_test_pkcs11_config.h  iot_test_pkcs11_trustm_config.h  iot_test_pkcs11_trustx_config.h  iot_test_pkcs11_xmc_config.h  optiga_mbedtls_config.h
vendors/infineon/boards/xmc4700_relaxkit/ports/pkcs11/: iot_pkcs11_pal.c
vendors/infineon/boards/xmc4800_plus_optiga_trust_m/: CMakeLists.txt  README.md  dev-mode-key-provisioning.md  freertos-configure.md
vendors/infineon/boards/xmc4800_plus_optiga_trust_m/aws_demos/application_code/: main.c
vendors/infineon/boards/xmc4800_plus_optiga_trust_m/aws_demos/config_files/: FreeRTOSConfig.h  iot_pkcs11_config.h
vendors/infineon/boards/xmc4800_plus_optiga_trust_m/aws_tests/application_code/: main.c
vendors/infineon/secure_elements/optiga_trust_m/: LICENSE  README.md
vendors/infineon/secure_elements/optiga_trust_m/certificates/: Infineon OPTIGA(TM) Trust M CA 101.pem
vendors/infineon/secure_elements/optiga_trust_m/pal/: pal_crypt_mbedtls.c
vendors/infineon/secure_elements/pkcs11/: iot_pkcs11_trustm.c  iot_pkcs11_trustx.c
vendors/marvell/boards/mw300_rd/: CMakeLists.txt
vendors/nxp/boards/lpc54018iotmodule/: CMakeLists.txt
vendors/ti/boards/cc3220_launchpad/: CMakeLists.txt
(+234 files in other folders)
